# homologacion-balances

./: .gitignore  Dockerfile  README.md  SUMMARY.md  analysis_legacy_gap.md  analyze_formats.py  app_validacion.py  cargar_datos.py  catalogo_maestro.json  clasificador_codigo_cuenta.py  db_repository.py  decision_engine.py  diccionario.json  diccionario_actualizado.json  diccionario_backup_pre_migration_20260707.json  diccionario_optimizado.json  diccionario_optimizado_backup_pre_migration_20260707.json  extractor_metadata.py  format_statistics.md  gold_standard.db  gold_standard_bench.db  inspect_pdf.py  inspection_results.json  learning_queue.json  parser_universal.py  pyproject.toml  reglas_especiales.py  requirements.txt  run_audit.py  run_knowledge_discovery.py  run_knowledge_generator.py  run_semantic_shadow.py  schema_minimo.sql  summarize_formats.py  test_analytics.py  test_confidence_audit.py  test_dashboard.py  test_dictionary_audit.py  test_evidence.py  test_knowledge.py  (+10 more)
accounting_knowledge/: __init__.py  analyzer.py  run_akb.py
adapters/: account_adapter.py
analytics/: benchmark_dashboard.py  coverage_report.py  dashboard.py  learning_dashboard.py  unclassified_analyzer.py
assessment/: __init__.py  document_assessment.py
audit/: classification_history.py
confidence/: __init__.py  confidence_engine.py  confidence_result.py  engine.py  models.py
config/: release.yml
decision/: __init__.py  engine.py  models.py
decision_v2/: engine.py  models.py
docs/: ADR-001-Semantic-Architecture.md  ADR-002-Decision-Engine.md  cmcc_production_design.md  (+8 more)
(+1209 files in other folders)
